--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Portfolio</title>
 </head>
 <body>
-<h1>Portfolio</h1>
-<h2> HAllo ik ben Lowie!</h2>
+<header>
+    <h1>Portfolio Lowie Simons</h1>
+    <article>
+        <h2>Introductie</h2>
+        <p>Hallo, ik ben Lowie Simons! Student programmeren aan de Hogeschool PXL Hassselt. Ik ben 22 jaar oud en mijn hobby is boulderen. Ik heb een interesse in programmeren en alles daaromheen. Dit is mijn portfolio, waar ik mijn progressie rondom mijn studie bijhoud. </p>
+    </article>
+</header>
+<main>
+
+</main>
 </body>
 </html>
