--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="porfolio.css">
 </head>
 <body>
 <header>
@@ -13,7 +14,98 @@
     </article>
 </header>
 <main>
-
+    <table>
+        <caption>Opdrachten en evaluaties</caption>
+        <thead>
+        <tr>
+            <th>Type</th>
+            <th>Opdracht</th>
+            <th>Korte omschrijving</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Evaluatie</td>
+            <td>LockDownBrowser</td>
+            <td>Installeer vooraf de LockDown Browser. Voor deze toets is verder geen voorkennis vereist.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Scratch</td>
+            <td>Maak kennis met de basisprincipes van het programmeren door een game te ontwikkelen met Scratch.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>Git & GitHub</td>
+            <td>Je kennis over Git en GitHub wordt getest aan de hand van een eenvoudige opdracht in HTML.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Reflecteren</td>
+            <td>Schrijf een korte reflectie over de Scratch-opdracht.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>Gastsprekers</td>
+            <td>Maak een korte reflectie over de gastsprekers.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Planning</td>
+            <td>Maak een gedetailleerde semester- en weekplanning voor dit semester.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>C# Console</td>
+            <td>Maak een consoleapplicatie in C#. Gebruik variabelen, controle- en herhalingsstructuren en methodes.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Carrièrekompas</td>
+            <td>Maak een vacatureopdracht over werkveldverkenning.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Feedback C# Console</td>
+            <td>Vertaal de algemene feedback op de consoleapplicatie naar je eigen project.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>HTML & CSS</td>
+            <td>Bouw een webpagina zo goed mogelijk na met HTML en CSS.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>Debugging</td>
+            <td>Haal de fouten uit een bestaande consoleapplicatie, gebruik hiervoor de debugging tools van Visual Studio.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Feedback Debugging</td>
+            <td>Vertaal de algemene feedback op de PE over debugging naar je eigen PE.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>SDG’s</td>
+            <td>Maak een korte reflectie over de SDG’s.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Curriculum Vitae</td>
+            <td>Maak een volledig CV met HTML en CSS.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>C# WPF</td>
+            <td>Bouw de GUI van een WPF-applicatie zo goed mogelijk na.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Curriculum Vitae</td>
+            <td>Maak een volledig CV met HTML en CSS.</td>
+        </tr>
+        </tbody>
+    </table>
 </main>
 </body>
 </html>
