--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
         </tr>
         </tbody>
     </table>
+<article>
+    <h2>Mijn keuze voor deze opleding</h2>
+    <h3>Waarom heb ik voor de opleiding programmeren gekozen?</h3>
+    <p>Ik heb deze opleiding gekozen omdat ik al van jongs af aan een grote interesse rondom technologie heb bijvoorbeeld: Gamen, computers en hoe die nu in elkaar steken en het samenstellen van toetsenborden. Na een aantal verschillende richtingen in het middelbaar te hebben gedaan rondom meer sociale beroepen vond ik dat het tijd was om dan toch eens ites rond IT uit te proberen. Ik heb dan ooit eens een kleine cursus gekregen van een vriend die over Python ging. Na het uitproberen van programmeren met Python was ik gelijk verkocht en wist ik zeker dat ik hier later iets mee wou gaan doen!</p>
+</article>
+    <article>
+        <h3>Waarom past dit beroep bij mij?</h3>
+        <p>Dit beroep past bij mij omdat eerst en vooral programmeren een interesse is van mij en ik werk graag samen met andere mensen om een bepaald doel te bereiken. Daarnaast wil ik ook iets willen betekenen voor andere, ik help graag waar ik kan helpen en ik denk dat via programmeren  het een mooie manier is om bepaalde problemen die bedrijven ervaren op te lossen zodat zij op een efficiëntere manier kunnen verder werken. Ik zou ook liever vanuit een kantoor / thuis willen werken waar ik rustig op mijn eigen plek kan gaan werken zonder al teveel prikkels. </p>
+    </article>
 </main>
 </body>
 </html>
