--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </tbody>
     </table>
 <article>
-    <h2>Mijn keuze voor deze opleding</h2>
+    <h2>Mijn keuze voor deze opleiding</h2>
     <h3>Waarom heb ik voor de opleiding programmeren gekozen?</h3>
     <p>Ik heb deze opleiding gekozen omdat ik al van jongs af aan een grote interesse rondom technologie heb bijvoorbeeld: Gamen, computers en hoe die nu in elkaar steken en het samenstellen van toetsenborden. Na een aantal verschillende richtingen in het middelbaar te hebben gedaan rondom meer sociale beroepen vond ik dat het tijd was om dan toch eens ites rond IT uit te proberen. Ik heb dan ooit eens een kleine cursus gekregen van een vriend die over Python ging. Na het uitproberen van programmeren met Python was ik gelijk verkocht en wist ik zeker dat ik hier later iets mee wou gaan doen!</p>
 </article>
@@ -115,6 +115,133 @@
         <h3>Waarom past dit beroep bij mij?</h3>
         <p>Dit beroep past bij mij omdat eerst en vooral programmeren een interesse is van mij en ik werk graag samen met andere mensen om een bepaald doel te bereiken. Daarnaast wil ik ook iets willen betekenen voor andere, ik help graag waar ik kan helpen en ik denk dat via programmeren  het een mooie manier is om bepaalde problemen die bedrijven ervaren op te lossen zodat zij op een efficiëntere manier kunnen verder werken. Ik zou ook liever vanuit een kantoor / thuis willen werken waar ik rustig op mijn eigen plek kan gaan werken zonder al teveel prikkels. </p>
     </article>
+    <table class="tableblock frame-all grid-all stretch">
+        <colgroup>
+            <col style="width: 20%;">
+            <col style="width: 80%;">
+        </colgroup>
+
+        <thead>
+        <tr>
+            <th class="tableblock halign-left valign-top">OLR</th>
+            <th class="tableblock halign-left valign-top">Omschrijving</th>
+        </tr>
+        </thead><tbody>
+    <tr>
+        <td class="tableblock halign-left valign-top" colspan="2"><p class="tableblock"><strong>Rol: Ontwerper</strong></p></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR1</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde bereidt de realisatie van een softwareproject voor.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR2</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde maakt op basis van de analyse een onderbouwd voorstel voor:</p>
+        </div>
+            <div class="olist loweralpha">
+                <ol class="loweralpha" type="a">
+                    <li>
+                        <p>het ontwerp,</p>
+                    </li>
+                    <li>
+                        <p>de programmeertaal en</p>
+                    </li>
+                    <li>
+                        <p>de methodiek.</p>
+                    </li>
+                </ol>
+            </div>
+            <div class="paragraph">
+                <p>De gegradueerde stemt het voorstel af met de softwareontwikkelaar, analist en/of projectleider.</p>
+            </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top" colspan="2"><p class="tableblock"><strong>Rol: Programmeur</strong></p></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR3</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde realiseert softwareapplicaties en gegevensstructuren.
+                De gegradueerde werkt hierbij planmatig binnen de context van het projectplan, de beschikbare tools en de vooropgestelde methodiek.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR4</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde is medeverantwoordelijk voor de eigen digitale werkomgeving en draagt bij tot de gedeelde infrastructuur die nodig is voor het ontwikkelen, testen en in productie brengen van projecten.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR5</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde programmeert softwaretoepassingen volgens de standaarden en afspraken binnen de organisatie.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR6</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde gaat in overleg met de softwareontwikkelaar, analist en/of projectleider na of het opgeleverde product onderhoud en/of aanpassingen nodig heeft.
+                De gegradueerde voert het onderhoud en de aanpassingen projectmatig uit, rekening houdend met eerder gemaakte afspraken.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top" colspan="2"><p class="tableblock"><strong>Rol: Tester</strong></p></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR7</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde gaat volgens testscenario’s de werking en functionaliteit van de gerealiseerde code na en verbetert deze op basis van feedback van de softwareontwikkelaar, analist, projectleider en/of gebruikers.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top" colspan="2"><p class="tableblock"><strong>Rol: Communicator / Teamspeler</strong></p></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR8</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde werkt constructief en actief samen in een multidisciplinair team en participeert actief tijdens overlegmomenten.
+                De gegradueerde zoekt mee naar oplossingen om problemen te vermijden.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR9</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde communiceert en rapporteert efficiënt over het geleverde werk, aangepast aan het doelpubliek en gebruikt hiervoor het gepaste Engelstalige vakjargon.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR10</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde documenteert de zelf ontwikkelde applicaties op een adequate en overzichtelijke manier gebruikmakend van een kennisdatabank en volgens de afspraken binnen de organisatie.
+                De gegradueerde geeft kwalitatieve input voor de gebruikershandleidingen, referentiegidsen en online hulpbronnen.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top" colspan="2"><p class="tableblock"><strong>Rol: Levenslang lerende IT-professional</strong></p></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR11</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde onderhoudt zijn deskundigheidsniveau door relevante duurzame IT- en maatschappelijke ontwikkelingen actief op te volgen.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR12</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde is zelfkritisch, ontwikkelt de nodige zelfkennis en gebruikt deze om zijn persoonlijke en professionele groei te bevorderen.</p>
+        </div></div></td>
+    </tr>
+    <tr>
+        <td class="tableblock halign-left valign-top"><p class="tableblock">OLR13</p></td>
+        <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+            <p>De gegradueerde handelt deontologisch en duurzaam, en houdt rekening met de veiligheids- en privacyrichtlijnen.</p>
+        </div></div></td>
+    </tr>
+    </tbody>
+    </table>
 </main>
 </body>
 </html>
