layout activiteiten + tabel opdrachten

--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
     </tr>
     </tbody>
     </table>
+    <h2>Vragen 5 rollen van een programmeur</h2>
     <article>
-        <h2>Vragen 5 rollen van een programmeur</h2>
         <h3>Ontwerper:</h3>
         <h4>Hoe ver sta ik?</h4>
         <p>Goed: ik snap het meeste van HTML & CSS.</p>
@@ -558,12 +558,130 @@
         <h4>Wat lukt mij nog niet zo goed?</h4>
         <p>Ik zou meer tijd moeten steken in research rondom de nieuwste trends in IT maar ook voor moeilijkheden die ik ervaar bij programmeervakken.</p>
     </article>
+    <h2>Voorbeelden van activiteiten</h2>
     <article>
-        <h2>Voorbeelden van activiteiten</h2>
         <h3>Ontwerper</h3>
         <p>1:</p>
-
+        <p>2:</p>
+        <p>3:</p>
     </article>
+    <article>
+        <h3>Programmeur</h3>
+        <p>1:</p>
+        <p>2:</p>
+        <p>3:</p>
+    </article>
+    <article>
+        <h3>Tester</h3>
+        <p>1:</p>
+        <p>2:</p>
+        <p>3:</p>
+    </article>
+    <article>
+        <h3>Communicator / Teamspeler</h3>
+        <p>1:</p>
+        <p>2:</p>
+        <p>3:</p>
+    </article>
+    <article>
+        <h3>Levenslang lerende IT-professional</h3>
+        <p>1:</p>
+        <p>2:</p>
+        <p>3:</p>
+    </article>
+    <h2>Opdrachten</h2>
+    <table>
+        <caption>Opdrachten en evaluaties</caption>
+        <thead>
+        <tr>
+            <th>Type</th>
+            <th>Opdracht</th>
+            <th>Korte omschrijving</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Evaluatie</td>
+            <td>LockDownBrowser</td>
+            <td>Installeer vooraf de LockDown Browser. Voor deze toets is verder geen voorkennis vereist.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Scratch</td>
+            <td>Maak kennis met de basisprincipes van het programmeren door een game te ontwikkelen met Scratch.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>Git & GitHub</td>
+            <td>Je kennis over Git en GitHub wordt getest aan de hand van een eenvoudige opdracht in HTML.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Reflecteren</td>
+            <td>Schrijf een korte reflectie over de Scratch-opdracht.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>Gastsprekers</td>
+            <td>Maak een korte reflectie over de gastsprekers.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Planning</td>
+            <td>Maak een gedetailleerde semester- en weekplanning voor dit semester.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>C# Console</td>
+            <td>Maak een consoleapplicatie in C#. Gebruik variabelen, controle- en herhalingsstructuren en methodes.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Carrièrekompas</td>
+            <td>Maak een vacatureopdracht over werkveldverkenning.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Feedback C# Console</td>
+            <td>Vertaal de algemene feedback op de consoleapplicatie naar je eigen project.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>HTML & CSS</td>
+            <td>Bouw een webpagina zo goed mogelijk na met HTML en CSS.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>Debugging</td>
+            <td>Haal de fouten uit een bestaande consoleapplicatie, gebruik hiervoor de debugging tools van Visual Studio.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Feedback Debugging</td>
+            <td>Vertaal de algemene feedback op de PE over debugging naar je eigen PE.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>SDG’s</td>
+            <td>Maak een korte reflectie over de SDG’s.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Curriculum Vitae</td>
+            <td>Maak een volledig CV met HTML en CSS.</td>
+        </tr>
+        <tr>
+            <td>Evaluatie</td>
+            <td>C# WPF</td>
+            <td>Bouw de GUI van een WPF-applicatie zo goed mogelijk na.</td>
+        </tr>
+        <tr>
+            <td>Opdracht</td>
+            <td>Curriculum Vitae</td>
+            <td>Maak een volledig CV met HTML en CSS.</td>
+        </tr>
+        </tbody>
+    </table>
 </main>
 </body>
 </html>
