voorbeeld projecten 5 rollen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </article>
 </header>
 <main>
+    <h2>Logboek</h2>
     <table class="tableblock frame-all grid-all stretch">
         <colgroup>
             <col style="width: 5.7142%;">
@@ -385,6 +386,7 @@
         <h3>Waarom past dit beroep bij mij?</h3>
         <p>Dit beroep past bij mij omdat eerst en vooral programmeren een interesse is van mij en ik werk graag samen met andere mensen om een bepaald doel te bereiken. Daarnaast wil ik ook iets willen betekenen voor andere, ik help graag waar ik kan helpen en ik denk dat via programmeren  het een mooie manier is om bepaalde problemen die bedrijven ervaren op te lossen zodat zij op een efficiëntere manier kunnen verder werken. Ik zou ook liever vanuit een kantoor / thuis willen werken waar ik rustig op mijn eigen plek kan gaan werken zonder al teveel prikkels. </p>
     </article>
+    <h2>De 5 rollen van een programmeur</h2>
     <table class="tableblock frame-all grid-all stretch">
         <colgroup>
             <col style="width: 20%;">
@@ -536,9 +538,9 @@
         <h4>Hoe ver sta ik?</h4>
         <p>Heb nog geen ervaring in software testing.</p>
         <h4>Wat lukt mij al goed?</h4>
-        <p></p>
+        <p>/</p>
         <h4>Wat lukt mij nog niet zo goed?</h4>
-        <p></p>
+        <p>/</p>
     </article>
     <article>
         <h3>Communicator / Teamspeler</h3>
@@ -561,33 +563,47 @@
     <h2>Voorbeelden van activiteiten</h2>
     <article>
         <h3>Ontwerper</h3>
-        <p>1:</p>
-        <p>2:</p>
-        <p>3:</p>
+        <p>1: Het ontwerpen van onze eigen CV met gebruik van HTML & CSS.</p>
+        <p>Het past binnen de rol omdat we zelf een layout moesten ontwerpen en opbouwen via code.</p>
+        <p>2: Het ontwerpen van onze portfolio met gebruik van HTML & CSS.</p>
+        <p>Hetzelfde zoals bij het onwerpen van de CV, een layout bedenken en visuaal opbouwen via code.</p>
+        <p>3: PE van HTMl & CSS bij werkplekleren 1.</p>
+        <p>Tijdens de PE moesten wij een bepaalde webpagina zo goed mogelijk namaken via code.</p>
     </article>
     <article>
         <h3>Programmeur</h3>
-        <p>1:</p>
-        <p>2:</p>
-        <p>3:</p>
+        <p>1: De PE's van werkplekleren 1 en C# Essentials.</p>
+        <p>Tijdens deze PE's moesten wij bepaalde softwareapplicatie's creëren via C#. bijvoorbeeld: een slotmachina, een game,...</p>
+        <p>2: Het leren debuggen van onze softwareapplicatie.</p>
+        <p>We hebben geleerd hoe we moeten debuggen bij een applicatie om bepaalde bugs op te lossen. Daar is ook een PE over geweest.</p>
+        <p>3: </p>
+        <p></p>
     </article>
     <article>
         <h3>Tester</h3>
-        <p>1:</p>
-        <p>2:</p>
+        <p>1: Het testen van geschreven code van een ander persoon.</p>
+        <p>Later zullen ik waarschijnlijk ook code moeten testen van andere mensen om feedback te kunnen geven over bepaalde bugs die ik heb gevonden. </p>
+        <p>2: Het testen van eigenn code om te zien of hij juiste werkt.</p>
+        <p>Naast het testen van andere hun code's zal ik ook die van mezelf moeten testen. Kijken of die goed werkt en dat geen bugs zijn etc.</p>
         <p>3:</p>
     </article>
     <article>
         <h3>Communicator / Teamspeler</h3>
-        <p>1:</p>
-        <p>2:</p>
-        <p>3:</p>
+        <p>1: Het werken aan een groepspresentatie</p>
+        <p>Voor Communication Skills hebben wij als een groep van 3 personen een presentatie moeten voorbereiden over een IT gericht onderwerp. daarbij was communicatie heel belangrijk bij de voorbereiding zodat iedereen duidelijk wist wie over welk deel van de presentatie moest praten.</p>
+        <p>2: Groepsprojecten school</p>
+        <p>In de toekomst bijvoorbeeld bij werkplekleren 2 zal het belangrijk zijn om goed samen te werken als team als we een project moeten maken. Communicatei speelt dan ook een grote rol voor bijvoorbeeld feedback te geven aan je teamgenoten of problemen durft aan te kaarten bij ergernissen.</p>
+        <p>3: Werkvloer</p>
+        <p>Later als ik een een job in de It heb zal ik altijd moeten samenwerken met collega's om projecten af te werken;</p>
     </article>
     <article>
         <h3>Levenslang lerende IT-professional</h3>
-        <p>1:</p>
-        <p>2:</p>
-        <p>3:</p>
+        <p>1: Steeds grotere prjecten programmeren.</p>
+        <p>Later zou ik graag aan grotere projecten willen werken om steeds meer te leren over het programmeren zelf en steeds beter en beter te worden.</p>
+        <p>2: informatieve filmpje's bekijken</p>
+        <p>Thuis kijk ik wel eens wat YouTube filmpje's over It gerichte onderwerpen waar ik moeite mee ervaar of wat mij interessant lijkt. zodat ik meer kennis op doe voor later.</p>
+        <p>3: vragen stellen aan mensen met meer kennis</p>
+        <p>Later zal ik altijd problemen ervaren bij projecten waar ik weinig ervaring bij heb. Ik zal dus veel vragen moeten stellen aan collega's die meer kennis hebben over dat onderwerp om zelf meer kennis op te doen.</p>
     </article>
     <h2>Opdrachten</h2>
     <table>
