--- a/index.html
+++ b/index.html
@@ -612,89 +612,123 @@
         <tr>
             <th>Type</th>
             <th>Opdracht</th>
-            <th>Korte omschrijving</th>
+            <th>omschrijving</th>
+            <th>Uitdagingen</th>
+            <th>Bijgeleerd</th>
         </tr>
         </thead>
         <tbody>
         <tr>
             <td>Evaluatie</td>
             <td>LockDownBrowser</td>
-            <td>Installeer vooraf de LockDown Browser. Voor deze toets is verder geen voorkennis vereist.</td>
+            <td>Een kleine PE die te maken viel als je de lockdown browser had gedownload</td>
+            <td>Geen uitdaging gewoonweg het programma installeren via een handleiding</td>
+            <td>Beter letten op typfouten aangezien ik daardoor een punt heb afgekregen.</td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Scratch</td>
-            <td>Maak kennis met de basisprincipes van het programmeren door een game te ontwikkelen met Scratch.</td>
+            <td>Een game maken in "Scratch" waarin je dingen moet ontwijken die uit de lucht vallen</td>
+            <td>Eerste keer gewerkt met scratch, dus het was even zoeken naar hoe alles precies werkte.</td>
+            <td>Een beter inzicht voor een stappenplan op te bouwen voordat ik daadwerkelijk begin aan het project.</td>
         </tr>
         <tr>
             <td>Evaluatie</td>
             <td>Git & GitHub</td>
-            <td>Je kennis over Git en GitHub wordt getest aan de hand van een eenvoudige opdracht in HTML.</td>
+            <td>Een PE waar we de basis van Git & GitHub lieten testen.</td>
+            <td>Ik zat op een bepaald punt vast waardoor ik mijn opdracht niet kon doorsturen en daardoor automatisch een 0 kreeg</td>
+            <td>Ik heb zelf de oplossing gevonden bij het probleem dat ik aantrif en heb sinds toen geen problemen meer mee gehad.</td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Reflecteren</td>
-            <td>Schrijf een korte reflectie over de Scratch-opdracht.</td>
+            <td>Een reflectie schrijven over de game d ie we in scratch hadden gemaakt.</td>
+            <td>Ervaarde geen moeilijkheden aangezien reflecteren 1 van mijn sterkte's is.</td>
+            <td>Heb een betere visie gekregen over dingen die beter konden en dat heb ik meegenomen naar verdere projecten.</td>
         </tr>
         <tr>
             <td>Evaluatie</td>
             <td>Gastsprekers</td>
-            <td>Maak een korte reflectie over de gastsprekers.</td>
+            <td>Een korte reflectie over de gastsprekers die zijn komen praten.</td>
+            <td>ervaarde geen moeilijkheden aangezien ik goed had opgelet.</td>
+            <td>Wat extra informatie over hoe de werkvloer er nu aan toe gaat in de IT</td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Planning</td>
-            <td>Maak een gedetailleerde semester- en weekplanning voor dit semester.</td>
+            <td>Een week en maandplanning maken voor school</td>
+            <td>Ik ervaarde geen moeilijkheden aangezien ik vaker planningen maak voor school/vrije tijd.</td>
+            <td>Meer buffertijd voorzien in mijn planning</td>
         </tr>
         <tr>
             <td>Evaluatie</td>
             <td>C# Console</td>
-            <td>Maak een consoleapplicatie in C#. Gebruik variabelen, controle- en herhalingsstructuren en methodes.</td>
+            <td>Een PE waarin de eerste paar hoofdstukken van C# werden gestest.</td>
+            <td>Ik was nog niet helemaal mee met de theorie waardoor de PE tegenviel.</td>
+            <td>Beter inzicht over de theorie die toen werd gevraagd.</td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Carrièrekompas</td>
-            <td>Maak een vacatureopdracht over werkveldverkenning.</td>
+            <td>Een opdracht maken met een zelf gekozen vacature van een beroep dat we interessant vinden</td>
+            <td>Wist nog niet zo goed welke kant ik wou uitgaan na mijn opleiding waardoor het moeilijker was om een gepaste vacature te vinden.</td>
+            <td>Meer kennis over beroepen dat ik wel interessant </td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Feedback C# Console</td>
-            <td>Vertaal de algemene feedback op de consoleapplicatie naar je eigen project.</td>
+            <td>Feedback geven over mijn eigen C# console opdracht.</td>
+            <td>Vond het moeilijk om mezelf feedback te geven omdat de PE enorm slecht was gegaan en weinig daadwerkelijk had kunnen doen tijdens die PE zodanig dat er niks was om feedback over te kunnen geven</td>
+            <td>/</td>
         </tr>
         <tr>
             <td>Evaluatie</td>
             <td>HTML & CSS</td>
-            <td>Bouw een webpagina zo goed mogelijk na met HTML en CSS.</td>
+            <td>Een webpagina nabuwen met HTML & CSS.</td>
+            <td>De PE was slecht gegaan, ik snapte de theorie wel maar in de uitvoering ben ik te traag om een gehele webpagina na te bouwen op een korte periode.</td>
+            <td>Dat ik de praktijk van HTML & CSS beheeres maar niet kan uitvoeren op een snel tempo</td>
         </tr>
         <tr>
             <td>Evaluatie</td>
             <td>Debugging</td>
-            <td>Haal de fouten uit een bestaande consoleapplicatie, gebruik hiervoor de debugging tools van Visual Studio.</td>
+            <td>Fouten opsporen in een reeds geschreven code met behulp van debugging</td>
+            <td>Te lang getreuzeld door stress waardoor ik te weinig tijd had voor de moeilijkere delen van de PE</td>
+            <td>Rustig beginnen aan de PE en niet gelijk beginnen panikeren als het niet direct lukt vanaf het begin.</td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Feedback Debugging</td>
-            <td>Vertaal de algemene feedback op de PE over debugging naar je eigen PE.</td>
+            <td>Een kleine relectie over hoe de Pe van debugging was verlopen</td>
+            <td>Had geen problemen ervaren aangezien het alleen maar een reflectie was</td>
+            <td>Niets uit geleerd.</td>
         </tr>
         <tr>
             <td>Evaluatie</td>
             <td>SDG’s</td>
-            <td>Maak een korte reflectie over de SDG’s.</td>
+            <td>Een korte reflectie schtijven over gastsprekers die zijn komen praten</td>
+            <td>Ik had ervaarde geen moeilijkheden aangezien ik goed had opgelet tijdens de presentatie.</td>
+            <td>Ik vond het een interessante presentatie wat mij wat meer inzicht heeft gegeven over bijvoorbeeld stage periode's.</td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Curriculum Vitae</td>
-            <td>Maak een volledig CV met HTML en CSS.</td>
+            <td>Een eigen CV opstellen met gebruik van HTML & CSS</td>
+            <td>Het moeilijkste vond ik het opstarten van de CV aangezien ik nog niet juist wist wat voor layout ik wou en daardoor ook nog niet wist hoe ik de CSS moest aanpakken.</td>
+            <td>Eerst een concrete layout kiezen voordat ik begin aan mijn opdracht zodat ik niet middenin vastloop.</td>
         </tr>
         <tr>
             <td>Evaluatie</td>
             <td>C# WPF</td>
-            <td>Bouw de GUI van een WPF-applicatie zo goed mogelijk na.</td>
+            <td>PE over het nabouwen van XAML window via C# en die laten functioneren</td>
+            <td>Zoals ik al bij alle C# PE's heb gehad ervaarde ik problemen bij het opstarten en het kritisch nadenken om bepaalde problemen op te lossn.</td>
+            <td>Dat mijn C# kennis niet goed genoeg is</td>
         </tr>
         <tr>
             <td>Opdracht</td>
             <td>Curriculum Vitae</td>
-            <td>Maak een volledig CV met HTML en CSS.</td>
+            <td>Een portfolio maken over wat we allemaal hebben gedaan in hte 1ste semester.</td>
+            <td>Ervaarde geen moeilijkheden aangezien het 1 grote reflectie is over mijn eigen traject. </td>
+            <td>Door optijd te beginnen ik geen tijdsdruk ervaar tegen de deadline aan.</td>
         </tr>
         </tbody>
     </table>
