tabel AIM + tabel kernkwaliteiten

--- a/index.html
+++ b/index.html
@@ -732,6 +732,93 @@
         </tr>
         </tbody>
     </table>
+    <h2>AIM reflectie werkplekleren 1</h2>
+    <table class="tableblock frame-all grid-all stretch">
+        <colgroup>
+            <col style="width: 25%;">
+            <col style="width: 75%;">
+        </colgroup>
+        <tbody>
+        <tr>
+            <td class="tableblock halign-left valign-top"><div class="content"></div></td>
+            <td class="tableblock halign-left valign-top"><p class="tableblock">
+                Dit is mijn reflectie over mijn 1ste semester van werkplekleren 1, hierin vertel ik wat al goed gaat en wat nog minder goed gaat. ook zal ik vertellen over mijn werkpunten die ik zeker zal meenemen naar volgned semester.</p></td>
+        </tr>
+        <tr>
+            <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock text-center">
+                <div class="content">
+                    <img src="images/goed.png" alt="positief" width="100">
+                </div>
+            </div></div></td>
+            <td class="tableblock halign-left valign-top"><p class="tableblock"></p>
+                <p class="tableblock">Persoonlijk vond ik de Scratch opdracht waarin we zelf een eigen game mochten creeëren het fijnst. Omxat ik dit een leuke introductie vond voor het echte programmeren. Daarnaast vond ik de gastsprekers die zijn geweest ook interessant omdat zij een duidelijker beeld gaven over hoe het er nu aan toe gaat op de werkvloer. </p></td>
+        </tr>
+        <tr>
+            <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock text-center">
+                <div class="content">
+                    <img src="images/minder%20goed.png" alt="minder leuk" width="100">
+                </div>
+            </div></div></td>
+            <td class="tableblock halign-left valign-top"><p class="tableblock"></p>
+                <p class="tableblock">Vooral C# is nooit echt bij mij doorgedrongen. Daardoor zijn mijn resultaten slecht en is de kans dat ik door ga naar werkplekleren 2 niet zo groot meer. Het meest frustrerende vond ik wel dat naast dat k zo hard mijn best heb gedaan voor de progrmmeervakken, het niet echt beloond word.</p></td>
+        </tr>
+        <tr>
+            <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock text-center">
+                <div class="content">
+                    <img src="images/lampje.jpg" alt="inzichten" width="100">
+                </div>
+            </div></div></td>
+            <td class="tableblock halign-left valign-top"><p class="tableblock"></p>
+                <p class="tableblock">waardevolle informatie voor mij was toch wel dat niet iedereen op hetzelfde tempo leert programmeren. Dat heeft mij dan toch altijd motivatie gegeven voor mijn best te doen door het hele semester heen. Ik zal dit ook nogsteeds meenemen naar het volgende semester want ik zal ongetwijfeld nog meer uitdagingen ondervinden. Daarnaast heb ik ook een aantal sterkte's en zwakte's van mezelf ontdekt die ook waardevol zullen zijn in de toekomst.</p></td>
+        </tr>
+        <tr>
+            <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock text-center">
+                <div class="content">
+                    <img src="images/kroontje.jpg" alt="succes" width="100">
+                </div>
+            </div></div></td>
+            <td class="tableblock halign-left valign-top"><p class="tableblock"></p>
+                <p class="tableblock">Mijn persoonlijk succes is toch wel het blijven doorzetten tijdens de opleiding zelfs met de slechte resultaten die toch wel demotiverend zijn. Dus daar ben ik trots op. Daarnaast heb ik ook een aantal nieuwe mensen leren kennen waar ik het goed mee kan vinden en heb ik ook wel een beter idee over hoe ik mijzelf zie naar de toekomst toe IT gericht.</p></td>
+        </tr>
+        </tbody>
+    </table>
+    <h2>Kernkwaliteiten</h2>
+    <table>
+        <tbody>
+        <tr>
+            <td>planning en organisatie</td>
+            <td>uitstelgedrag</td>
+        </tr>
+        <tr>
+            <td>chaos</td>
+            <td>optijd beginnen aan opdrachten</td>
+        </tr>
+        </tbody>
+    </table>
+    <table>
+        <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        </tbody>
+    </table>
+    <table>
+        <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        </tbody>
+    </table>
 </main>
 </body>
 </html>
