kernkwadrant + beetje css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="porfolio.css">
 </head>
 <body>
+<button id="toggle-nav">☰ Menu</button>
+<nav id="toc"></nav>
 <header>
     <h1>Portfolio Lowie Simons</h1>
     <article>
@@ -795,6 +797,14 @@
         </tr>
         </tbody>
     </table>
+    <p>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</p>
+    <p>Ik heb dit semester beter leren plannen, het heeft me geholpen een betere routine te behouden en het aanzetten tot mij achter mijn cursus te zetten is daardoor ook makkelijker geworden.</p>
+    <p>Hoe zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</p>
+    <p>Soms betrap ik mijzelf nogsteeds op het uitstellen van taken/leren. bijvoorbeeld bij het maken van mijn cv heb ik wat langer gewacht waardoor het wat krapper werd met tijd om hem af te krijgen en ook nog eens een mooi resultaat af te leveren.</p>
+    <p>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</p>
+    <p>Een uitdaging zal zeker zijn om mij te houden aan mijn planningen en om zo min mogelijk schoolwerk uit te stellen. Maar ik geloof in mezelf dat ik het schooljaar tot een goed einde zal kunnen brengen. </p>
+    <p>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</p>
+    <p>Vooral beter en efficiënter leren programmeren. Maar ook nieuwe mensen leren kennen waarmee ik kan samenwerken, een betere kijk op hoe het op de werkvloer zal gaan waardoor ik een betere kijk oo de toekomst kan hebben over wat ik allemaal kan verwachten. </p>
     <table>
         <tbody>
         <tr>
@@ -807,6 +817,14 @@
         </tr>
         </tbody>
     </table>
+    <p>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</p>
+    <p></p>
+    <p>Hoe zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</p>
+    <p></p>
+    <p>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</p>
+    <p></p>
+    <p>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</p>
+    <p></p>
     <table>
         <tbody>
         <tr>
@@ -819,6 +837,34 @@
         </tr>
         </tbody>
     </table>
+        <p>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</p>
+        <p></p>
+        <p>Hoe zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</p>
+        <p></p>
+        <p>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</p>
+        <p></p>
+        <p>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</p>
+        <p></p>
 </main>
 </body>
 </html>
+<script>
+    const toc = document.getElementById("toc");
+    const headers = document.querySelectorAll("h2");
+    const toggleBtn = document.getElementById("toggle-nav");
+    headers.forEach((h2, index) => {
+        if (!h2.id) {
+            h2.id = "section-" + (index + 1);
+        }
+        const link = document.createElement("a");
+        link.href = "#" + h2.id;
+        link.textContent = h2.textContent;
+        link.addEventListener("click", () => {
+            toc.classList.remove("open");
+        });
+        toc.appendChild(link);
+    });
+    toggleBtn.addEventListener("click", () => {
+        toc.classList.toggle("open");
+    });
+</script>
