--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
         <tr>
             <td class="tableblock halign-left valign-top"><div class="content"></div></td>
             <td class="tableblock halign-left valign-top"><p class="tableblock">
-                Dit is mijn reflectie over mijn 1ste semester van werkplekleren 1, hierin vertel ik wat al goed gaat en wat nog minder goed gaat. ook zal ik vertellen over mijn werkpunten die ik zeker zal meenemen naar volgned semester.</p></td>
+                Dit is mijn reflectie over mijn 1ste semester van werkplekleren 1, hierin vertel ik wat al goed gaat en wat nog minder goed gaat. ook zal ik vertellen over mijn werkpunten die ik zeker zal meenemen naar het volgende semester.</p></td>
         </tr>
         <tr>
             <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock text-center">
@@ -785,7 +785,7 @@
         </tbody>
     </table>
     <h2>Kernkwaliteiten</h2>
-    <table>
+    <table id="kernn">
         <tbody>
         <tr>
             <td>planning en organisatie</td>
@@ -797,54 +797,35 @@
         </tr>
         </tbody>
     </table>
-    <p>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</p>
+    <p><strong>talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</strong></p>
     <p>Ik heb dit semester beter leren plannen, het heeft me geholpen een betere routine te behouden en het aanzetten tot mij achter mijn cursus te zetten is daardoor ook makkelijker geworden.</p>
-    <p>Hoe zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</p>
+    <p><strong> zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</strong></p>
     <p>Soms betrap ik mijzelf nogsteeds op het uitstellen van taken/leren. bijvoorbeeld bij het maken van mijn cv heb ik wat langer gewacht waardoor het wat krapper werd met tijd om hem af te krijgen en ook nog eens een mooi resultaat af te leveren.</p>
-    <p>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</p>
+    <p><strong>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</strong></p>
     <p>Een uitdaging zal zeker zijn om mij te houden aan mijn planningen en om zo min mogelijk schoolwerk uit te stellen. Maar ik geloof in mezelf dat ik het schooljaar tot een goed einde zal kunnen brengen. </p>
-    <p>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</p>
+    <p><strong> wil ik nog meer bijleren tijdens de volgende periode van WPL?</strong></p>
     <p>Vooral beter en efficiënter leren programmeren. Maar ook nieuwe mensen leren kennen waarmee ik kan samenwerken, een betere kijk op hoe het op de werkvloer zal gaan waardoor ik een betere kijk oo de toekomst kan hebben over wat ik allemaal kan verwachten. </p>
-    <table>
+    <table id="kern">
         <tbody>
         <tr>
-            <td></td>
-            <td></td>
+            <td>zelfstandigheid</td>
+            <td>te veel zelf willen doen</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>passiviteit</td>
+            <td>proactiviteit</td>
         </tr>
         </tbody>
     </table>
-    <p>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</p>
-    <p></p>
-    <p>Hoe zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</p>
-    <p></p>
-    <p>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</p>
-    <p></p>
-    <p>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</p>
-    <p></p>
-    <table>
-        <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        </tbody>
-    </table>
-        <p>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</p>
-        <p></p>
-        <p>Hoe zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</p>
-        <p></p>
-        <p>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</p>
-        <p></p>
-        <p>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</p>
-        <p></p>
+    <p><strong>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</strong></p>
+    <p>Tijdens dit semester heb ik beter leren zelfstandig werken bijvoorbeeld aan mijn cv, portfolio, scratch projec, etc. Ook het eigen onderhouden van geziene leerstof en het actief leren voor PE's was ook een grote factor dat heeft geholpen met het zelfstandig worden.</p>
+    <p><strong> zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</strong></p>
+    <p>Door alles zelfstandig te willen doen heb ik aan bepaalde projecten meer tijd moeten besteden omdat ik vastliep en liever zelf een oplossing vond. terwijl ik ook eigenlijk het internet kon inschakelen om bijvoorbeeld meer inspiratie op te doen hoe ik beter mijn probleem had kunnen aanpakken. </p>
+    <p><strong>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</strong></p>
+    <p>De belangrijkste is toch wel om meer hulp te durven vragen bij dingen waar ik problemen ervaar.  Daarnaast heb ik soms nog moeite bij het opstarten van projecten waardoor ik soms kostbare tijd laat voorbij gaan aangezien ik zelf in handen heb wanneer ik daadwerkelijk begin aan mijn studies/projecten.</p>
+    <p><strong>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</strong></p>
+    <p>betere tijdsverdeling en beter durven aangeven als ik ergens moeite mee heb.</p>
+
 </main>
 </body>
 </html>
